Fix on Safari/Apple Devices
Fix on img main breaking the height.

--- a/style/styleindex.css
+++ b/style/styleindex.css
@@ -1,4 +1,4 @@
-main{
+main {
     display: flex;
     max-width: 85%;
     justify-content: space-between;
@@ -6,64 +6,70 @@ main{
     margin-bottom: 60px;
 }
 
-#title{
+#title {
     text-align: center;
 }
-  
-#title h1{
+
+#title h1 {
     font-size: 3em;
-    padding:60px 40px;
+    padding: 60px 40px;
     color: rgb(29, 28, 28);
 }
-#imgmain{
+
+#imgmain {
+    -webkit-max-width: 700px;
     max-width: 700px;
+    height: auto;
+    -webkit-height: auto;
     display: flex;
     overflow: hidden;
 }
 
-#imgmain img{
+#imgmain img {
+    -webkit-object-fit: cover;
     object-fit: cover;
     -moz-transition: all 0.5s;
-	-webkit-transition: all 0.5s;
+    -webkit-transition: all 0.5s;
     transition: all 0.5s;
 }
 
-#imgmain img:hover  {
-	-moz-transform: scale(1.1);
-	-webkit-transform: scale(1.1);
-	transform: scale(1.1);
+#imgmain img:hover {
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
 }
 
-#actionlinks{
-    max-width: 350px;   
+#actionlinks {
+    max-width: 350px;
     margin-top: 20px;
     margin-left: 40px;
 }
 
-#actionlinks figure+figure{
+#actionlinks figure+figure {
     margin-top: 10px;
 }
 
-#actionlinks figcaption a{ 
+#actionlinks figcaption a {
     font-size: 1.6em;
 }
-#actionlinks figcaption a:hover{ 
-   text-decoration: underline;
+
+#actionlinks figcaption a:hover {
+    text-decoration: underline;
 }
 
-#actionlinks img{
+#actionlinks img {
     width: 350px;
     height: 200px;
     object-fit: cover;
     padding: 5px 0px 5px 0px;
 }
 
-#entidades{
+#entidades {
     padding: 60px 0px;
     text-align: center;
 }
 
-.entidadesgroup{
+.entidadesgroup {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -72,151 +78,152 @@ main{
     margin-bottom: 30px;
 }
 
-.entidadesgroup img{
+.entidadesgroup img {
     max-width: 160px;
-    padding: 10px ;
-} 
+    padding: 10px;
+}
 
 
-.entidadesgroup img{
-	-moz-transition: all 0.15s;
-	-webkit-transition: all 0.15s;
+.entidadesgroup img {
+    -moz-transition: all 0.15s;
+    -webkit-transition: all 0.15s;
     transition: all 0.15s;
 }
 
 
-.entidadesgroup img:hover{
-	-moz-transform: scale(1.2);
-	-webkit-transform: scale(1.2);
-	transform: scale(1.2);
+.entidadesgroup img:hover {
+    -moz-transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
 }
 
 
 
 
-@media (max-width:865px){
+@media (max-width:865px) {
 
-    main{
+    main {
         flex-direction: column;
     }
 
-    #imgmain main{
+    #imgmain main {
         max-width: 100%;
         height: 300px;
     }
-    
-    #actionlinks{
+
+    #actionlinks {
         max-width: 100%;
-        display: flex; 
+        display: flex;
         justify-content: space-between;
         margin-left: 0px;
     }
 
-    #actionlinks img{
+    #actionlinks img {
         max-width: 100%;
-       
+
     }
 
-    #actionlinks figure+figure{
+    #actionlinks figure+figure {
         margin-top: 0px;
         margin-left: 20px;
     }
 
-    #actionlinks p{
+    #actionlinks p {
         max-width: 300px;
     }
 
-    .entidadesgroup{
+    .entidadesgroup {
         max-width: 75%;
     }
 
 }
 
-@media (max-width: 695px){
-    main{
+@media (max-width: 695px) {
+    main {
         align-items: center;
     }
 
-    #actionlinks{
+    #actionlinks {
         flex-direction: column;
-        
+
     }
 
-    #actionlinks figure{
+    #actionlinks figure {
         margin: 20px 0px;
     }
-    
-    #actionlinks figure+figure{
+
+    #actionlinks figure+figure {
         margin-left: 0;
     }
 
-    #actionlinks p{
+    #actionlinks p {
         max-width: 300px;
     }
 
-    #divnovidades{
+    #divnovidades {
         max-width: 350px;
     }
 
-    #divnovidades img{
+    #divnovidades img {
         max-width: 350px;
         height: 300px;
     }
 
-    .entidadesgroup{
+    .entidadesgroup {
         max-width: 95%;
     }
 
-    .entidadesgroup img{
+    .entidadesgroup img {
         padding: 10px 20px;
     }
 
-    #infolocal{
+    #infolocal {
         flex-direction: column;
     }
-    
-    #infolocal address{
+
+    #infolocal address {
         margin-left: 0;
     }
 }
 
-@media (max-width: 650px){
+@media (max-width: 650px) {
 
-    main{
+    main {
         align-items: center;
     }
-    #actionlinks{
+
+    #actionlinks {
         flex-direction: column;
-        
+
     }
 
-    #actionlinks figure{
+    #actionlinks figure {
         margin: 20px 0px;
     }
-    
-    #actionlinks figure+figure{
+
+    #actionlinks figure+figure {
         margin-left: 0;
     }
 
-    #actionlinks p{
+    #actionlinks p {
         max-width: 300px;
     }
 
-    #divnovidades{
+    #divnovidades {
         max-width: 350px;
     }
 
-    #divnovidades img{
+    #divnovidades img {
         max-width: 350px;
         height: 300px;
     }
 
-    .entidadesgroup{
+    .entidadesgroup {
         flex-direction: column;
         justify-content: space-evenly;
     }
 
-    #entidadescontent{
+    #entidadescontent {
         display: flex;
     }
 
